[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
crc32fast = "1.3.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
